# whisper-annotation-tools

./: pyproject.toml  readme.md
src/whisper_annotation_tools/: __init__.py  cli.py  main.py
src/whisper_annotation_tools/utils/: structure.py
